creacion configuracion es proyecto